add: signup and login page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <body>
     <div id="app">
       <h1>Medicare</h1>
+      <a href="./src/views/Login/index.html">login</a>
+      <br />
+      <a href="./src/views/SignUp/index.html">signup</a>
     </div>
 
     <script type="module" src="./src/main.ts"></script>
