--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
               class="bg-transparent hover:bg-blue-500 text-blue-700 font-semibold hover:text-white py-2 px-4 border border-blue-500 hover:border-transparent rounded"
               >Log In</a
             >
+
+            <a href="./src/views/DoctorCard/index.html">Doctor Card</a>
           </div>
         </div>
       </nav>
