--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       href="https://cdn.jsdelivr.net/npm/tailwindcss@2.1.4/dist/tailwind.min.css"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
@@ -69,6 +70,8 @@
             >
 
             <a href="./src/views/DoctorCard/index.html">Doctor Card</a>
+            <a href="./src/views/UserLayout/index.html">User Dashboard</a>
+            <a href="./src/views/DoctorAvailability/index.html">Doctor Availability</a>
           </div>
         </div>
       </nav>
@@ -90,7 +93,7 @@
           </p>
         </div>
         <div class="md:w-1/2 mt-10 md:mt-0 flex justify-center">
-          <img src="./src/assets/hero.svg" alt="Doctor" class="rounded-full" />
+          <img src="./src/assets/hero.svg" alt="Doctor" />
         </div>
       </section>
 
