--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               >Log In</a
             >
 
-            <a href="./src/views/DoctorCard/index.html">Doctor Card</a>
+            <a href="./src/views/DoctorApplyForm/index.html">Doctor Apply Form</a>
             <a href="./src/views/UserLayout/index.html">User Dashboard</a>
             <a href="./src/views/DoctorAvailability/index.html">Doctor Availability</a>
           </div>
