update: dynamic forms

--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
             <a href="./src/views/DoctorApplyForm/index.html">Doctor Apply Form</a>
             <a href="./src/views/UserLayout/index.html">User Dashboard</a>
             <a href="./src/views/DoctorAvailability/index.html">Doctor Availability</a>
+
+            <a href="./src/views/DoctorCard/index.html">Doctor card</a>
           </div>
         </div>
       </nav>
